# linXiv

./: .gitignore  AI_tools.py  README.md  arxiv_cli.py  basic_connect.py  db.py  doi_resolve.py  downloads.py  fetch_paper_metadata.py  linxiv_cli.py  main_shell.py  notes.py  pdf.py  print_markdown.py  projects.py  pyproject.toml  requirements.txt  run_api.py  search.py
.github/workflows/: ci.yml
api/: __init__.py  app.py  graph_payload.py
formats/: __init__.py  bibtex.py  markdown.py  table_format.md
gui/: app.py  app_shell.py  doi_page.py  graph_page.py  graph_view.py  home_page.py  library_page.py  main_window.py  markdown_view.py  pdf_window.py  projects_page.py  search_window.py  setup_page.py  shell.py  tex_view.py  theme.py
gui/graph/: page.py
gui/qt_assets/: paper_card.py
gui/search/: __init__.py  _pdf_controller.py  _query_builder.py  _widgets.py  _window.py  _workers.py
gui/web/: graph.css  graph.html  graph.js  markdown.html  tex_view.html
sources/: __init__.py  arxiv_source.py  base.py  crossref_source.py  fetch_paper_metadata.py  openalex_source.py
storage/: __init__.py  db.py
tests/: conftest.py  test_db.py  test_doi_resolve.py  test_json_fmt.py  test_non_arxiv.py  test_notes.py  test_projects.py
